[project]
name = "epub_to_markdown"
version = "0.1.0"
description = "一个将 EPUB 书籍转换为 Markdown 文件的工具。"
authors = [
    { name = "Gemini", email = "gemini@example.com" },
]
dependencies = [
    "html2text",
    "ebooklib",
    "beautifulsoup4",
]
requires-python = ">=3.8"

[project.scripts]
epub2md = "epub_to_markdown.converter:main"
